chore: open java.text