@@ -1,3 +1,4 @@
 -Dfile.encoding=UTF-8
 --add-opens=java.base/java.util=ALL-UNNAMED
 --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens=java.base/java.text=ALL-UNNAMED
